FIX maven cleanup and moving to Maven Wrapper